# ragdrift-arize-bridge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: run_baseline_week.py  run_drifted_week.py
src/ragdrift_arize/: __init__.py
tests/: test_bridge.py
